# medstral

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
agent/: actions.py  benchmark.py  gepa_adapter.py  gepa_optimize.py  llm.py  observability.py  parallel.py  prompts.py  state_types.py  traversal.py  zero_shot.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BatchStep.tsx  ChatMessage.tsx  CodeTraversal.tsx  ConfigureModal.tsx  InputBar.tsx  PromptLog.tsx  TraversalProgress.tsx  TraversalResult.tsx
frontend/src/hooks/: useConfig.ts  useTraversal.ts
frontend/src/lib/: agent.ts  api.ts  parse.ts  types.ts
server/: app.py  payloads.py
